Small cleanups, eval command and /hangman